edit swagger and annotation
