# docs/swagger.json
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/requestModels.UserLogin"
                         }
                     }
                 ],
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/requestModels.UserRegister"
                         }
                     }
                 ],
@@ -81,65 +81,22 @@
         }
     },
     "definitions": {
-        "domain.Group": {
-            "type": "object",
-            "properties": {
-                "levelProgress": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.LevelProgress"
-                    }
-                },
-                "name": {
-                    "type": "string"
-                },
-                "tasks": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.Task"
-                    }
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.User"
-                    }
-                }
-            }
-        },
-        "domain.LevelProgress": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "domain.Task": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "level": {
-                    "$ref": "#/definitions/domain.LevelProgress"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "domain.User": {
+        "requestModels.UserLogin": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "groups": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.Group"
-                    }
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestModels.UserRegister": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
